# maxwellgp

./: .gitignore  README.md  pyproject.toml
examples/: basic.py  cavity.py  cavity_field.py  cavity_operator.py  full_maxwell.py  tangent_maxwell.py
res/: config.txt
src/maxwellgp/: __init__.py  gp.py  kernel.py  utils.py
