[project]
name = "maxwellgp"
version = "0.1.0"
description = "Ehrenpreis Palamodov Gaussian Process for Maxwell's Equations"
readme = "README.md"
authors = [
    { name = "Félix Vittori", email = "vittorifelix@gmail.com" },
    { name = "Luis Wirth", email = "lwirth2000@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.13.2",
    "jax>=0.8.1",
    "jaxtyping>=0.3.3",
    "matplotlib>=3.10.7",
    "optax>=0.2.6",
    "torch>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 88
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "F722", "F821", # fix false positives for jaxtyping
    "E501" # disable line length errors
]
